--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/aos": "^3.0.3",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-router-dom": "^5.1.6",
+    "aos": "^3.0.0-beta.6",
+    "easy-peasy": "^4.0.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -42,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^16.9.55",
     "eslint": "^7.12.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "^6.14.0",
